--- a/gomoku-swift/Views/BoardSquareView.xib
+++ b/gomoku-swift/Views/BoardSquareView.xib
@@ -12,22 +12,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BoardSquareView" customModule="gomoku_swift" customModuleProvider="target">
             <connections>
-                <outlet property="button" destination="0Ho-ee-SBh" id="XPc-63-G0Q"/>
-                <outlet property="contentView" destination="iN0-l3-epB" id="cyp-bh-ST2"/>
+                <outlet property="backgroundView" destination="iN0-l3-epB" id="JK1-ps-Dqf"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="109" height="95"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ho-ee-SBh">
-                    <rect key="frame" x="0.0" y="0.0" width="109" height="95"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button"/>
-                </button>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.81960791349999995" green="0.82352948189999997" blue="0.83529418710000003" alpha="1" colorSpace="deviceRGB"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="-99.5" y="339.5"/>
